created the initial html for doctor searchpage

--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>My Awesome Project</title>
+        <title>Bootleg MD</title>
     </head>
     <body>
-        <h1>Awesome stuff to come...</h1>
+        <h1>Search for Doctors in your area</h1>
     </body>
 
 
