--- a/SymptomsPage/SymptomsPage.html
+++ b/SymptomsPage/SymptomsPage.html
@@ -42,11 +42,14 @@
     <!-- Form -->
     <div class="container">
         <div class="wrapper">
+            <div class="form-row justify-content-md-center">
+                    <h3>Symptoms Checker</h3>
+            </div>
             <form>
                 <div class="form-row justify-content-md-center">
                     <div class="form-group col-sm-1">
                         <label for="inputAge4">Age</label>
-                        <input type="text" class="form-control" id="inputAge" placeholder="25">
+                        <input type="text" class="form-control" id="inputAge"  >
                     </div>
                     <div class="form-group col-sm-1">
                         <label for="inputSex">Sex</label>
@@ -67,6 +70,11 @@
                     <div class="form-group col-md-6">
                         <p>Your Symptoms</p>
                         <div class="listSymptoms"></div>
+                    </div>
+                </div>
+                <div class="form-row justify-content-md-center">
+                    <div class="form-group col-sm-1 buttondiv">
+                            <input class="btn btn-dark" type="submit" value="Submit">
                     </div>
                 </div>
                 <div class="form-row justify-content-md-center">
