--- a/SymptomsPage/SymptomsPage.html
+++ b/SymptomsPage/SymptomsPage.html
@@ -51,7 +51,7 @@
                         <label for="inputAge4">Age</label>
                         <input type="text" class="form-control" id="inputAge"  >
                     </div>
-                    <div class="form-group col-sm-1">
+                    <div class="form-group col-sm-1.5">
                         <label for="inputSex">Sex</label>
                         <select id="inputSex" class="form-control">
                             <option selected></option>
@@ -65,6 +65,9 @@
                         <label for="inputSymptom">Add Your Symptoms Here</label>
                         <input type="text" class="form-control" id="inputSymptom" placeholder="Ex: Headache">
                     </div>
+                </div>
+                <div class="form-row justify-content-md-center">
+                    <button type="button" class="btn btn-dark">Add Symptom</button>
                 </div>
                 <div class="form-row justify-content-md-center">
                     <div class="form-group col-md-6">
