--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <div class="collapse navbar-collapse" id="navbarResponsive">
                         <ul class="navbar-nav ml-auto">
                           <li class="nav-item active">
-                            <a class="nav-link" href="SymptomsPage.html">Symptoms Checker
+                            <a class="nav-link" href="SymptomsPage/SymptomsPage.html">Symptoms Checker
                                
                             </a>
                           </li>
