--- a/SymptomsPage/SymptomsPage.html
+++ b/SymptomsPage/SymptomsPage.html
@@ -90,6 +90,7 @@
     </div>
     
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="SymptomsPage.js"></script>
 </body>
 </html>
