Fixed Functionality to adding symptoms and added padding to body to provide gap between container of form and the footer

--- a/SymptomsPage/SymptomsPage.html
+++ b/SymptomsPage/SymptomsPage.html
@@ -10,6 +10,18 @@
     <link rel="stylesheet" href="../assets/css/style.css">
     <link rel="stylesheet" href="SymptomsPage.css">
 </head>
+<!DOCTYPE html>
+<html>
+
+<head>
+    <title>Bootleg MD: Symptoms Search</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="../assets/css/style.css">
+    <link rel="stylesheet" href="SymptomsPage.css">
+</head>
 
 <body>
     <!-- navigation -->
@@ -67,7 +79,7 @@
                     </div>
                 </div>
                 <div class="form-row justify-content-md-center">
-                    <button type="button" class="btn btn-dark">Add Symptom</button>
+                    <button type="button" class="add btn btn-dark">Add Symptom</button>
                 </div>
                 <div class="form-row justify-content-md-center">
                     <div class="form-group col-md-6">
@@ -88,9 +100,16 @@
             </form>
         </div>
     </div>
+
+    <footer class="footer">
+        <div class="two-toned-footer-color"></div>
+        <p class="copyright text-muted-footer text-center">
+          &copy; Copyright
+        </p>
+    </footer>
     
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="SymptomsPage.js"></script>
+    <script type="text/javascript" src="../SymptomsPage/SymptomsPage.js"></script>
 </body>
 </html>
