--- a/SymptomsPage/SymptomsPage.html
+++ b/SymptomsPage/SymptomsPage.html
@@ -61,7 +61,7 @@
                 <div class="form-row justify-content-md-center">
                     <div class="form-group col-sm-1">
                         <label for="inputAge4">Age</label>
-                        <input type="text" class="form-control" id="inputAge"  >
+                        <input type="text" class="form-control" id="inputAge">
                     </div>
                     <div class="form-group col-sm-1.5">
                         <label for="inputSex">Sex</label>
@@ -89,7 +89,7 @@
                 </div>
                 <div class="form-row justify-content-md-center">
                     <div class="form-group col-sm-1 buttondiv">
-                            <input class="btn btn-dark" type="submit" value="Submit">
+                            <button class="btn btn-dark submit" type="button">Submit</button>
                     </div>
                 </div>
                 <div class="form-row justify-content-md-center">
@@ -110,6 +110,6 @@
     
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="../SymptomsPage/SymptomsPage.js"></script>
+    <script type="text/javascript" src="symptomsPage.js"></script>
 </body>
 </html>
