--- a/Sam/calendar.html
+++ b/Sam/calendar.html
@@ -50,12 +50,12 @@
             <div class="form-group">
               <label id="startingDestination" for="exampleInputlocation1">Starting Destination</label>
               <input type="location" class="form-control" id="exampleInputlocation1" placeholder="Enter location here">
-              <small id="emailHelp" class="form-text text-muted">Include city, state, and zipcode.</small>
+              <small id="emailHelp" class="form-text text-muted">Include address, city, and state.</small>
             </div>
             <div class="form-group">
               <label id="finalDestination" for="exampleInputlocation2">Final Destination</label>
               <input type="password" class="form-control" id="exampleInputlocation2" placeholder="Enter location here">
-              <small id="emailHelp" class="form-text text-muted">Include city, state, and zipcode.</small>
+              <small id="emailHelp" class="form-text text-muted">Include address, city, and state.</small>
             </div>
             <!-- <div class="form-group form-check">
               <input type="checkbox" class="form-check-input" id="exampleCheck1">
