--- a/SymptomsPage/SymptomsPage.html
+++ b/SymptomsPage/SymptomsPage.html
@@ -67,15 +67,17 @@
                         <label for="inputSex">Sex</label>
                         <select id="inputSex" class="form-control">
                             <option selected></option>
-                            <option>Male</option>
-                            <option>Female</option>
+                            <option>male</option>
+                            <option>female</option>
                         </select>
                     </div>
                 </div>
                 <div class="form-row justify-content-md-center">
                     <div class="form-group col-md-6">
                         <label for="inputSymptom">Add Your Symptoms Here</label>
-                        <input type="text" class="form-control" id="inputSymptom" placeholder="Ex: Headache">
+                        <select data-placeholder="Ex: Headache" class="chosen-select inputSymptom">
+                            <option value=""></option>
+                        </select>
                     </div>
                 </div>
                 <div class="form-row justify-content-md-center">
@@ -109,6 +111,8 @@
     </footer>
     
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/momentjs/2.12.0/moment.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.15/lodash.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="symptomsPage.js"></script>
 </body>
