--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="assests/css/style.css"></link>
-    <link rel="stylesheet" href="assests/css/reset.css"></link>
     <title>BootLegMD</title>
 </head>
 <body>
@@ -24,7 +23,7 @@
           <div class="collapse navbar-collapse" id="navbarResponsive">
               <ul class="navbar-nav ml-auto">
                 <li class="nav-item active">
-                  <a class="nav-link" href="symptomsPage/symptomsPage.html">Symptoms Checker
+                  <a class="nav-link" href="SymptomsPage/SymptomsPage.html">Symptoms Checker
                       
                   </a>
                 </li>
@@ -41,8 +40,8 @@
    
    <!-- rotating news articles -->
   <div class="jumbotron">
-      <div class="card" style="width: 18rem">
-      <h4>most relevant news story</h4>
+      <div id="cardClass">
+        <h1>something</h1>
       </div>
     </div>
     
@@ -50,6 +49,7 @@
   src="https://code.jquery.com/jquery-3.4.1.js"
   integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
   crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
   <script src="assets/js/home.js"></script>
 </body>
 </html>
