--- a/SymptomsPage/SymptomsPage.html
+++ b/SymptomsPage/SymptomsPage.html
@@ -25,7 +25,7 @@
 
 <body>
     <!-- navigation -->
-    <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #e3f2fd;">
+    <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #236CA0;">
         <div class="container">
             <a class="navbar-brand" href="../index.html">
                 <h3 id="logo">BootlegMD</h3>
@@ -81,7 +81,7 @@
                     </div>
                 </div>
                 <div class="form-row justify-content-md-center">
-                    <button type="button" class="add btn btn-dark">Add Symptom</button>
+                    <button type="button" class="add btn btn-dark" style="background-color: #4F5051">Add Symptom</button>
                 </div>
                 <div class="form-row justify-content-md-center">
                     <div class="form-group col-md-6">
@@ -91,10 +91,10 @@
                 </div>
                 <div class="form-row justify-content-md-center">
                     <div class="form-group col-sm-1 buttondiv">
-                            <button class="btn btn-dark submit" type="button">Submit</button>
+                            <button class="btn btn-dark submit" type="button" style="background-color: #4F5051">Submit</button>
                     </div>
                 </div>
-                <div class="form-row justify-content-md-center">
+                <div class="form-row justify-content-md-center list">
                     <div class="form-group col-md-6">
                         <div class="listDiagnoses"></div>
                     </div>
