completed functionality and css

--- a/Sam/calendar.html
+++ b/Sam/calendar.html
@@ -54,19 +54,26 @@
             </div>
             <div class="form-group">
               <label id="finalDestination" for="exampleInputlocation2">Final Destination</label>
-              <input type="password" class="form-control" id="exampleInputlocation2" placeholder="Enter location here">
+              <input type="finalDestination" class="form-control" id="exampleInputlocation2" placeholder="Enter location here">
               <small id="emailHelp" class="form-text text-muted">Include address, city, and state.</small>
             </div>
             <!-- <div class="form-group form-check">
               <input type="checkbox" class="form-check-input" id="exampleCheck1">
               <label class="form-check-label" for="exampleCheck1">Check me out</label>
             </div> -->
-            <button id= "submit" type="submit" class="btn btn-primary">Submit</button>
+            <button id= "submit" type="button" class="btn btn-primary">Submit</button>
           </form>
 
-<div>
+<div id="finalDirections">
     <!-- directions to destination will go here -->
 </div>
+
+<footer class="footer">
+    <div class="two-toned-footer-color"></div>
+    <p class="copyright text-muted-footer text-center">
+      &copy; Copyright
+    </p>
+</footer>
 
   
            <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
