--- a/SymptomsPage/SymptomsPage.html
+++ b/SymptomsPage/SymptomsPage.html
@@ -73,9 +73,9 @@
                     </div>
                 </div>
                 <div class="form-row justify-content-md-center">
-                    <div class="form-group col-md-6">
+                    <div class="form-group col-sm-6">
                         <label for="inputSymptom">Add Your Symptoms Here</label>
-                        <select data-placeholder="Ex: Headache" class="chosen-select inputSymptom">
+                        <select data-placeholder="Ex: Headache" class="form-control chosen-select inputSymptom justify-content-md-center" style="width: 90%">
                             <option value=""></option>
                         </select>
                     </div>
