--- a/index.html
+++ b/index.html
@@ -5,14 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="assests/css/style.css"></link>
+ 
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+   
     <title>BootLegMD</title>
 </head>
 <body>
   
   <!-- nav bar to navigate the other pages -->
-  <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #e3f2fd;">
+  <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #236CA0;">
       <div class="container">
           <a class="navbar-brand" href="../index.html">
               <h3 id="logo">BootlegMD</h3>
@@ -39,16 +40,16 @@
    </nav>
    
    <!-- rotating news articles -->
-  <div class="jumbotron">
-      <div id="cardClass">
-        <h1>something</h1>
-      </div>
-    </div>
-    
-    <script
-  src="https://code.jquery.com/jquery-3.4.1.js"
-  integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
-  crossorigin="anonymous"></script>
+  <div id="jumbo"></div>
+
+  <div id="article-list"></div>
+  <footer class="footer">
+      <div class="two-toned-footer-color"></div>
+      <p class="copyright text-muted-footer text-center">
+        &copy; Copyright
+      </p>
+  </footer>
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
   <script src="assets/js/home.js"></script>
 </body>
