--- a/Sam/calendar.html
+++ b/Sam/calendar.html
@@ -16,7 +16,7 @@
     <body>
             
 
-        <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #e3f2fd;">
+        <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #236CA0;">
             <div class="container">
                 <a class="navbar-brand" href="../index.html">
                     <h3 id="logo">BootlegMD</h3>
@@ -61,7 +61,7 @@
               <input type="checkbox" class="form-check-input" id="exampleCheck1">
               <label class="form-check-label" for="exampleCheck1">Check me out</label>
             </div> -->
-            <button id= "submit" type="button" class="btn btn-primary">Submit</button>
+            <button style="background-color: #4F5051" id= "submit" type="button" class="btn btn-primary">Submit</button>
           </form>
 
 <div id="finalDirections">
