linked directions page

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                   <a class="nav-link" href="portfolio.html">Doctor Search</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="contact.html">Calendar</a>
+                  <a class="nav-link" href="contact.html">Directions</a>
                 </li>
               </ul>
           </div>
