--- a/SymptomsPage/SymptomsPage.html
+++ b/SymptomsPage/SymptomsPage.html
@@ -41,10 +41,10 @@
                     </a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="portfolio.html">Doctor Search</a>
+                    <a class="nav-link" href="../doctors/index.html">Doctor Search</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="contact.html">Calendar</a>
+                    <a class="nav-link" href="../Sam/calendar.html">Calendar</a>
                   </li>
                 </ul>
             </div>
