fixing index page link

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <!-- nav bar to navigate the other pages -->
   <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #236CA0;">
       <div class="container">
-          <a class="navbar-brand" href="../index.html">
+          <a class="navbar-brand" href="index.html">
               <h3 id="logo">BootlegMD</h3>
           </a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
