updated navBar to link to other pages

--- a/Sam/calendar.html
+++ b/Sam/calendar.html
@@ -29,12 +29,12 @@
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ml-auto">
                       <li class="nav-item">
-                        <a class="nav-link" href="SymptomsPage.html">Symptoms Checker
+                        <a class="nav-link" href="../SymptomsPage/SymptomsPage.html">Symptoms Checker
                             
                         </a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="portfolio.html">Doctor Search</a>
+                        <a class="nav-link" href="../doctors/index.html">Doctor Search</a>
                       </li>
                       <li class="nav-item active">
                         <a class="nav-link" href="contact.html">Directions</a>
