Updated links to point to correct relative path

--- a/index.html
+++ b/index.html
@@ -11,38 +11,6 @@
     <title>BootLegMD</title>
 </head>
 <body>
-<<<<<<< HEAD
-        <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #e3f2fd;">
-                <div class="container">
-                    <a class="navbar-brand" href="../index.html">
-                        <h3 id="logo">BootlegMD</h3>
-                    </a>
-                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                        </button>
-                    <div class="collapse navbar-collapse" id="navbarResponsive">
-                        <ul class="navbar-nav ml-auto">
-                          <li class="nav-item active">
-                            <a class="nav-link" href="SymptomsPage/SymptomsPage.html">Symptoms Checker
-                               
-                            </a>
-                          </li>
-                          <li class="nav-item">
-                            <a class="nav-link" href="portfolio.html">Doctor Search</a>
-                          </li>
-                          <li class="nav-item">
-                            <a class="nav-link" href="contact.html">Calendar</a>
-                          </li>
-                        </ul>
-                    </div>
-                </div>
-            </nav>
-    
-    <script
-  src="https://code.jquery.com/jquery-3.4.1.js"
-  integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
-  crossorigin="anonymous"></script>
-=======
   
   <!-- nav bar to navigate the other pages -->
   <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #236CA0;">
@@ -61,10 +29,10 @@
                   </a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="portfolio.html">Doctor Search</a>
+                  <a class="nav-link" href="doctors/index.html">Doctor Search</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="contact.html">Directions</a>
+                  <a class="nav-link" href="Sam/calendar.html">Directions</a>
                 </li>
               </ul>
           </div>
@@ -84,6 +52,5 @@
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
   <script src="assets/js/home.js"></script>
->>>>>>> 669e94b962c9b9c65d705131feabd5983fe72703
 </body>
 </html>
