--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
 <body>
   
   <!-- nav bar to navigate the other pages -->
+  
   <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #236CA0;">
-      <div class="container">
+      <div class="container" style="width: 80%; margin: auto">
           <a class="navbar-brand" href="index.html">
               <h3 id="logo">BootlegMD</h3>
           </a>
