fixxed card formatting to new screens

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <!-- nav bar to navigate the other pages -->
   
   <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #236CA0;">
-      <div class="container" style="width: 80%; margin: auto">
+      <div class="container" >
           <a class="navbar-brand" href="index.html">
               <h3 id="logo">BootlegMD</h3>
           </a>
