--- a/SymptomsPage/SymptomsPage.html
+++ b/SymptomsPage/SymptomsPage.html
@@ -44,7 +44,7 @@
                     <a class="nav-link" href="../doctors/index.html">Doctor Search</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="../Sam/calendar.html">Calendar</a>
+                    <a class="nav-link" href="../Sam/calendar.html">Directions</a>
                   </li>
                 </ul>
             </div>
